# ch32v307

EVT/EXAM/: CMakeLists.txt
EVT/EXAM/SRC/Startup/: startup_ch32v30x_D8.S  startup_ch32v30x_D8C.S
